--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "high performance mob instance",
   "main": "index.js",
   "scripts": {
-    "build": "babel index.js -d lib/"
+    "build": "babel index.js -d lib/",
+    "flow": "flow"
   },
   "keywords": [
     "javascript",
@@ -22,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-flow": "^6.23.0"
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.53.1"
   }
 }
