--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel index.js -d lib/",
-    "flow": "flow"
+    "flow": "flow",
+    "start-server": "babel-node ./server/index.js"
   },
   "keywords": [
     "javascript",
@@ -23,7 +24,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.53.1"
+  },
+  "dependencies": {
+    "express": "^4.15.4"
   }
 }
