--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel index.js -d lib/",
     "flow": "flow",
-    "start-server": "babel-node ./server/index.js --presets es2017"
+    "start-server": "babel-node ./server/index.js"
   },
   "keywords": [
     "javascript",
@@ -30,6 +30,8 @@
     "flow-bin": "^0.53.1"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "stringy": "^0.1.0",
+    "ws": "^3.1.0"
   }
 }
