--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flow-bin": "^0.53.1"
   },
   "dependencies": {
+    "await-delay": "^1.0.0",
     "express": "^4.15.4",
     "stringy": "^0.1.0",
     "ws": "^3.1.0"
