--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.53.1"
+    "flow-bin": "^0.53.1",
+    "tape": "^4.8.0"
   },
   "dependencies": {
     "await-delay": "^1.0.0",
     "express": "^4.15.4",
+    "level": "^1.7.0",
+    "levelup": "^1.3.9",
     "stringy": "^0.1.0",
+    "sublevel": "^2.4.0",
     "ws": "^3.1.0"
   }
 }
