--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "await-delay": "^1.0.0",
+    "bn.js": "^4.11.8",
     "express": "^4.15.4",
+    "immutable": "^3.8.1",
     "level": "^1.7.0",
     "levelup": "^1.3.9",
     "stringy": "^0.1.0",
