--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bn.js": "^4.11.8",
     "express": "^4.15.4",
     "immutable": "^3.8.1",
+    "keythereum": "^1.0.2",
     "level": "^1.7.0",
     "levelup": "^1.3.9",
     "stringy": "^0.1.0",
