--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "await-delay": "^1.0.0",
     "bn.js": "^4.11.8",
+    "ethereumjs-testrpc": "^4.1.3",
+    "ethereumjs-util": "^5.1.2",
     "express": "^4.15.4",
     "immutable": "^3.8.1",
     "keythereum": "^1.0.2",
