--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "bn.js": "^4.11.8",
     "ethereumjs-testrpc": "^4.1.3",
     "ethereumjs-util": "^5.1.2",
+    "ethjs-provider-http": "^0.1.6",
+    "ethjs-query": "^0.2.9",
     "express": "^4.15.4",
     "immutable": "^3.8.1",
     "keythereum": "^1.0.2",
