--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "immutable": "^3.8.1",
     "keythereum": "^1.0.2",
     "level": "^1.7.0",
+    "level-sublevel": "^6.6.1",
     "levelup": "^1.3.9",
     "stringy": "^0.1.0",
     "sublevel": "^2.4.0",
