--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
   "dependencies": {
     "await-delay": "^1.0.0",
     "bn.js": "^4.11.8",
+    "ethereumjs-abi": "^0.6.4",
     "ethereumjs-testrpc": "^4.1.3",
     "ethereumjs-util": "^5.1.2",
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.2.9",
+    "ethjs-signer": "^0.1.1",
     "express": "^4.15.4",
     "immutable": "^3.8.1",
     "keythereum": "^1.0.2",
     "level": "^1.7.0",
     "level-sublevel": "^6.6.1",
     "levelup": "^1.3.9",
+    "solidity-sha3": "^0.4.1",
     "stringy": "^0.1.0",
     "sublevel": "^2.4.0",
     "ws": "^3.1.0"
